--- a/app.json
+++ b/app.json
@@ -31,19 +31,19 @@
 
         "BOT_TOKEN": {
 
-            "description": "Your Bot token from @Botfather"
+            "description": "6416742986:AAE8S2MmGIeNDuLM2oMCyXrrg738wOBqm5I"
 
         },
 
         "API_ID": {
 
-            "description": "Your API_ID from https://my.telegram.org/apps"
+            "description": "27100684"
 
         },
 
         "API_HASH": {
 
-            "description": "Your API_HASH from https://my.telegram.org/apps"
+            "description": "3d9ff72941b7c8ecafbadf7d625f0108"
 
         }
 
